@@ -1,8 +1,9 @@
 package com.goeminne.trino.rss;
 
-import com.google.common.collect.ImmutableList;
 import io.trino.spi.Plugin;
 import io.trino.spi.connector.ConnectorFactory;
+
+import java.util.List;
 
 /**
  * A Trino Plugin that provides a connector for RSS sources.
@@ -10,6 +11,6 @@ import io.trino.spi.connector.ConnectorFactory;
 public class RSSPlugin implements Plugin {
     @Override
     public Iterable<ConnectorFactory> getConnectorFactories() {
-        return ImmutableList.of(new RSSConnectorFactory());
+        return List.of(new RSSConnectorFactory());
     }
 }
